# pixone

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
api/: .env.example  .gitignore  Procfile  manage.py  pyproject.toml
api/apps/core/: admin.py  models.py
api/apps/core/migrations/: 0001_initial.py  0002_remove_processingresult_output_path_and_more.py
api/apps/core/storage/: __init__.py  base.py  local.py  s3.py
api/apps/face_detection/: api.py  apps.py  schemas.py
api/apps/face_detection/services/: __init__.py  base.py  own.py  rekognition.py
api/apps/reframe/: api.py  apps.py  schemas.py  service.py
api/pixone/: settings.py  urls.py  wsgi.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  REQUIREMENTS.md
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/api/: pixone.ts
ui/src/components/face_detection/: FaceDetectPage.tsx
ui/src/components/reframe/: Controls.tsx  ImageCanvas.tsx  ReframePage.tsx
